@@ -1,18 +1,15 @@
-FROM maven:3.9-eclipse-temurin-25-alpine AS builder
-
+# ── Stage 1: Build nativo ─────────────────────────────────────────────────────
+FROM vegardit/graalvm-maven:latest-java24 AS builder
 WORKDIR /app
 COPY pom.xml .
 RUN mvn dependency:resolve -q
 COPY src ./src
-RUN mvn clean package -DskipTests -q
+RUN MAVEN_OPTS="--enable-native-access=ALL-UNNAMED" mvn clean package -Pnative -DskipTests -q
 
-FROM eclipse-temurin:25-jre-alpine
-
+# ── Stage 2: Runtime ──────────────────────────────────────────────────────────
+FROM debian:bookworm-slim
 WORKDIR /app
-COPY --from=builder /app/target/hello.jar .
+COPY --from=builder /app/target/rinha-api .
 COPY fraud-index ./fraud-index
-COPY start.sh .
-RUN chmod +x start.sh
-
 EXPOSE 8080
-ENTRYPOINT ["./start.sh"]
+ENTRYPOINT ["./rinha-api"]
